--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.soulzenyogashala.agenda">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="br.com.frederykantunnes.agenda">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.TelaDeCadastro"></activity>
-        <activity android:name=".ui.activity.MainActivity">
+        android:theme="@style/AppTheme"
+        android:name="br.com.frederykantunnes.agenda.AgendaApplication"
+        tools:ignore="GoogleAppIndexingWarning">
+
+        <activity android:name="br.com.frederykantunnes.agenda.ui.activity.TelaDeCadastro" />
+        <activity android:name="br.com.frederykantunnes.agenda.ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
